--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Khrystelline's FAVORITE</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
+<body>
+
+    <div class="one">
+        <h1>Khrystelline's Favorites</h1>
+
+    </div>
+
+    <div class="two">
+        <h3>About Khrystelline</h3>
+    </div>
+
+    <div class="three">
+        <h3>Favorite Color</h3>
+    </div>
+
+    <div class="four">
+        <h3>Favorite Food</h3>
+    </div>
+
+    <div class="five">
+        <h3>Favorite Flower</h3>
+    </div>
+</body>
+
+<footer>
+
+</footer>
+</html>
