--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               It’s the perfect combination of comfort and celebration.
             </p>
           </div>
-          <img src="/assets/Background-Biryani.png" alt="Beef Biryani" class="hover-float">
+          <img src="./assets/Background-Biryani.png" alt="Beef Biryani" class="hover-float">
         </div>
   
         <div class="container">
